# ESP32-LoRaMac-Node

./: LICENSE  README.md  sdkconfig
components/Loramac/: CMakeLists.txt
components/Loramac/boards/: i2c-board.h
components/Loramac/boards/ESP32/: 2nd-gpio-board.c  board-config.h  board.c  delay-board.c  eeprom-board.c  gpio-board.c  i2c-board.c  rtc-board.c  spi-board.c  sx1276-board.c  uart-board.c
components/Loramac/mac/: secure-element-nvm.h
components/Loramac/mac/region/: RegionAU915.c  RegionNvm.h
components/Loramac/radio/: CMakeLists.txt
components/Loramac/radio/sx1276/: sx1276.c
components/Loramac/system/: uart.c
components/ping-pong/: CMakeLists.txt  ping-pong.c
components/ping-pong/include/: ping-pong.h
components/test-loramac/: CMakeLists.txt  test-ping.c  test-rtc.c  test-spi.c  test-sx1276.c  test-uart.c
components/test-loramac/include/: test-rtc.h  test-spi.h  test-sx1276.h  test-uart.h
main/: main.c
